BP-103 chore: 재난문자 api가 공공데이터 포털에서 재난안전공유 데이터플랫폼으로 바뀜으로 인한 파라미터 수정